src/libqevent.bf

public struct QTouchEvent
{
	[LinkName("QTouchEvent_new")]
	public static extern void* QTouchEvent_new(int64 eventType);
	[LinkName("QTouchEvent_new2")]
	public static extern void* QTouchEvent_new2(int64 eventType, QPointingDevice device, int64 modifiers, int64 touchPointStates);
	[LinkName("QTouchEvent_new3")]
	public static extern void* QTouchEvent_new3(int64 eventType, QPointingDevice device);
	[LinkName("QTouchEvent_new4")]
	public static extern void* QTouchEvent_new4(int64 eventType, QPointingDevice device, int64 modifiers);
	[LinkName("QTouchEvent_new5")]
	public static extern void* QTouchEvent_new5(int64 eventType, QPointingDevice device, int64 modifiers, QEventPoint[] touchPoints);
	[LinkName("QTouchEvent_new6")]
	public static extern void* QTouchEvent_new6(int64 eventType, QPointingDevice device, int64 modifiers, int64 touchPointStates, QEventPoint[] touchPoints);
	[LinkName("QTouchEvent_Clone")]
	public static extern QTouchEvent QTouchEvent_Clone(void* c_this);
	[LinkName("QTouchEvent_Target")]
	public static extern QObject QTouchEvent_Target(void* c_this);
	[LinkName("QTouchEvent_TouchPointStates")]
	public static extern int64 QTouchEvent_TouchPointStates(void* c_this);
	[LinkName("QTouchEvent_TouchPoints")]
	public static extern QEventPoint[] QTouchEvent_TouchPoints(void* c_this);
	[LinkName("QTouchEvent_IsBeginEvent")]
	public static extern bool QTouchEvent_IsBeginEvent(void* c_this);
	[LinkName("QTouchEvent_IsUpdateEvent")]
	public static extern bool QTouchEvent_IsUpdateEvent(void* c_this);
	[LinkName("QTouchEvent_IsEndEvent")]
	public static extern bool QTouchEvent_IsEndEvent(void* c_this);
}
public struct QScrollPrepareEvent
{
	[LinkName("QScrollPrepareEvent_new")]
	public static extern void* QScrollPrepareEvent_new(QPointF startPos);
	[LinkName("QScrollPrepareEvent_Clone")]
	public static extern QScrollPrepareEvent QScrollPrepareEvent_Clone(void* c_this);
	[LinkName("QScrollPrepareEvent_StartPos")]
	public static extern QPointF QScrollPrepareEvent_StartPos(void* c_this);
	[LinkName("QScrollPrepareEvent_ViewportSize")]
	public static extern QSizeF QScrollPrepareEvent_ViewportSize(void* c_this);
	[LinkName("QScrollPrepareEvent_ContentPosRange")]
	public static extern QRectF QScrollPrepareEvent_ContentPosRange(void* c_this);
	[LinkName("QScrollPrepareEvent_ContentPos")]
	public static extern QPointF QScrollPrepareEvent_ContentPos(void* c_this);
	[LinkName("QScrollPrepareEvent_SetViewportSize")]
	public static extern void QScrollPrepareEvent_SetViewportSize(void* c_this, QSizeF size);
	[LinkName("QScrollPrepareEvent_SetContentPosRange")]
	public static extern void QScrollPrepareEvent_SetContentPosRange(void* c_this, QRectF rect);
	[LinkName("QScrollPrepareEvent_SetContentPos")]
	public static extern void QScrollPrepareEvent_SetContentPos(void* c_this, QPointF pos);
}
public struct QScrollEvent
{
	[LinkName("QScrollEvent_new")]
	public static extern void* QScrollEvent_new(QPointF contentPos, QPointF overshoot, int64 scrollState);
	[LinkName("QScrollEvent_Clone")]
	public static extern QScrollEvent QScrollEvent_Clone(void* c_this);
	[LinkName("QScrollEvent_ContentPos")]
	public static extern QPointF QScrollEvent_ContentPos(void* c_this);
	[LinkName("QScrollEvent_OvershootDistance")]
	public static extern QPointF QScrollEvent_OvershootDistance(void* c_this);
	[LinkName("QScrollEvent_ScrollState")]
	public static extern int64 QScrollEvent_ScrollState(void* c_this);
}
public struct QScreenOrientationChangeEvent
{
	[LinkName("QScreenOrientationChangeEvent_new")]
	public static extern void* QScreenOrientationChangeEvent_new(QScreen screen, int64 orientation);
	[LinkName("QScreenOrientationChangeEvent_Clone")]
	public static extern QScreenOrientationChangeEvent QScreenOrientationChangeEvent_Clone(void* c_this);
	[LinkName("QScreenOrientationChangeEvent_Screen")]
	public static extern QScreen QScreenOrientationChangeEvent_Screen(void* c_this);
	[LinkName("QScreenOrientationChangeEvent_Orientation")]
	public static extern int64 QScreenOrientationChangeEvent_Orientation(void* c_this);
}
public struct QApplicationStateChangeEvent
{
	[LinkName("QApplicationStateChangeEvent_new")]
	public static extern void* QApplicationStateChangeEvent_new(int64 state);
	[LinkName("QApplicationStateChangeEvent_Clone")]
	public static extern QApplicationStateChangeEvent QApplicationStateChangeEvent_Clone(void* c_this);
	[LinkName("QApplicationStateChangeEvent_ApplicationState")]
	public static extern int64 QApplicationStateChangeEvent_ApplicationState(void* c_this);
}
public struct QInputMethodEvent__Attribute
{
	[LinkName("QInputMethodEvent__Attribute_new")]
	public static extern void* QInputMethodEvent__Attribute_new(int64 typ, int32 s, int32 l, QVariant val);
	[LinkName("QInputMethodEvent__Attribute_new2")]
	public static extern void* QInputMethodEvent__Attribute_new2(int64 typ, int32 s, int32 l);
	[LinkName("QInputMethodEvent__Attribute_new3")]
	public static extern void* QInputMethodEvent__Attribute_new3(QInputMethodEvent__Attribute param1);
	[LinkName("QInputMethodEvent__Attribute_OperatorAssign")]
	public static extern void QInputMethodEvent__Attribute_OperatorAssign(void* c_this, QInputMethodEvent__Attribute param1);
}